[package]
name = "ActixWebTaskService"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "^4"
uuid = {version = "1.18.1", features = ["v4"]}
serde = {version = "^1", features = ["derive"]}
aws-config = "1.8.10"
aws-sdk-dynamodb = "1.97.0"
env-logger = "0.8"
log = "^0.4"
strum_macro = "^0.24"
strum = {version = "^0.24", features = ["derive"]}
derive_more = "^0.99"